# CCSC-CTF-2021

./: .gitignore  README.md
ai/neuralmate/: README.md  docker-build.sh  docker-run.sh
ai/neuralmate/setup/: .dockerignore  Dockerfile  flag.txt  neuralmate.py  pyproject.toml  secret.py  service.py
ai/neuralmate/setup/model/variables/: variables.index
blockchain/lucky-moves/: .gitignore  README.md  docker-build.sh  docker-run.sh
blockchain/lucky-moves/setup/getflag/: flag.txt  getflag.py  pyproject.toml  requirements.txt
crypto/confusing-moves/: .gitignore  README.md  docker-build.sh  docker-run.sh
crypto/confusing-moves/setup/: .dockerignore  Dockerfile  docker-compose.yml  entrypoint.sh  flag.txt  manage.py  pyproject.toml
crypto/confusing-moves/setup/private_packages/pgnparser-1.0-py3-none-any/pgnparser-1.0.dist-info/: METADATA  RECORD  WHEEL
crypto/confusing-moves/setup/pypiserver/: Dockerfile  README.rst
crypto/confusing-moves/setup/pypiserver/auth/: .htpasswd
crypto/confusing-moves/setup/pypiserver/docker/: entrypoint.sh
crypto/confusing-moves/setup/pypiserver/pypiserver/: _app.py  backend.py
crypto/confusing-moves/setup/webapp/: __init__.py  benny.py  config.py  lcg.py  models.py
crypto/confusing-moves/setup/webapp/static/: main.css  main.js
crypto/confusing-moves/setup/webapp/templates/: _base.html  footer.html  header.html
crypto/confusing-moves/setup/webapp/templates/user/: parser.html
crypto/confusing-moves/setup/webapp/user/: forms.py  views.py
crypto/forced-draw/: README.md
crypto/less-said-the-better/: README.md  docker-build.sh
crypto/queens-encryption/: README.md
crypto/rookie's-base/: README.md
crypto/singularity/: README.md  docker-build.sh
forensics/exchanges/: README.md
forensics/one-of-a-kind/: README.md
forensics/protochess/: README.md  docker-build.sh
forensics/protochess/setup/: Dockerfile  enc.proto  enc_client.py  enc_pb2.py  enc_pb2_grpc.py  enc_service.py  flag.txt  pyproject.toml
forensics/the-janitor/: README.md
forensics/the-janitor-2/: README.md
misc/afterload/: Dockerfile  README.md
misc/botgov/: README.md
misc/cap-i-sh/: Dockerfile  README.md
pwn/Resignation/: README.md  docker-build.sh  docker-run.sh
pwn/ask me anything/: README.md  docker-build.sh  docker-run.sh
pwn/caro-kann/: README.md  docker-build.sh  docker-run.sh
pwn/chess portal/: README.md  docker-build.sh  docker-run.sh
pwn/chessanalyzer/: README.md  docker-build.sh  docker-run.sh
pwn/doubled pwns/: README.md  docker-build.sh  docker-run.sh
pwn/two knights/: README.md  docker-build.sh  docker-run.sh
reverse/fortified-walls/: README.md  docker-build.sh  docker-run.sh
reverse/fortified-walls/setup/: .dockerignore  Dockerfile  borgovs-moves.py  borgovs-moves.py.template  create_chall.py  flag.txt  pyproject.toml  secret.py
reverse/make-your-mov/: README.md
reverse/reverse_gambit/: CMakeLists.txt  README.MD  challenge.c  challenge.h  flag_print.c  includes.h
(+230 files in other folders)
