[tool.poetry]
name = "alphachess"
version = "0.1.0"
description = ""
authors = ["rok0s <info@cybermouflons.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.4.1"
scikit-image = "^0.18.1"
chess = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
