[tool.poetry]
name = "fortified-walls"
version = "0.1.0"
description = ""
authors = ["Rok0s <info@cybermouflons.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyarmor = "^6.6.1"
Jinja2 = "^2.11.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
