[tool.poetry]
name = "validator"
version = "0.1.0"
description = ""
authors = ["rok0s <info@cybermouflons.com>"]

[tool.poetry.dependencies]
python = ">3.6.1,<3.7.0 || >3.7.0,<3.7.1 || >3.7.1,<4.0"
web3 = "^5.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
